--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "Your Account Token",
-"id": "Your Account Id",
+"token": "OTMyMzA0NzM5OTQzNzM5NDYz.GJQdpc.uOMyaNYduuCZE65c8QTmgIRjpdOo03Xm_YsLQg",
+"id": "932304739943739463",
 "stats": "STREAMING",
-"text": "Type Any text",
-"text2": "Type Any text",
-"idvc": "Type Voice Id" 
+"text": "𝐀𝐫𝐚👑🔥",
+"text2": "𝐀𝐫𝐚👑🔥",
+"idvc": "1049044361507242035" 
 }
